更改了一些bug， 这样用户不能查看到管理员的页面，管理员登陆会看到管理员的相关页面。普通用户只能查看数据，管理员可以创建删除indices

--- a/src/plugins/kibana/public/settings/sections/indices/_list.html
+++ b/src/plugins/kibana/public/settings/sections/indices/_list.html
@@ -9,9 +9,9 @@
       <li
         ng-if="!defaultIndex"
         class="sidebar-item">
-        <div class="sidebar-item-title full-title">
-          <span class="label label-warning">Warning</span> The user group which you belong to has not yet added any
-          data, please contact your system administrator to add the appropriate data.
+        <div class="sidebar-item-title full-title no-indices">
+          <span class="label label-warning">Warning</span> The user group which you belong to <strong>not yet added any
+          data</strong>, please contact your system administrator to add the appropriate data.
         </div>
       </li>
       <li
